iFeature Changelog

****************************

Version 3.0.6 (12-22-11)
-Added Portuguese language support. 

Version 3.0.5 (12-15-11)
-Additional visual tweaks for WordPress 3.3.
-Minor tweak to comments hook. 
-Minor HTML markup tweak. 
-Removed 404 image. 
-General fixes and cleanup. 

Version 3.0.4 (12-09-11)
-Removed cursor:pointer from iMenu css. 
-Removed call to missing stylesheet. 
-Removed unecessary template file in Core directory.
-Fixed post formats icons not displaying without saving settings. 
-jQuery no-conflict fix.
-Now enqueing WP jQuery library.
-Changed old 'ifeature' textdomain to 'core' in comments.php. 
-Minor CSS tweak to meta link colors. 
-Centered theme options panel, added WordPress 3.3 fix. 


Version 3.0.3 (12-01-11)
-Adjustment to search results text.
-Posts with no title will now display "Untitled".
-Fixed child theme support.
-Adjustment to UL in comments.
-Fixed bug where not keymaster admins in multisite installs could not access theme options.
-Changed footer styling.
-Fixed visual issues with IE. 
-Added missing No Tile option to custom backgrounds. 
-Disabling slider navigation also hides slider nav style.
-Fixed some social icons not showing up by default.

Version 3.0.2 (11-27-11)
-Fixed Google Analytics code option.
-Added missing Header Contact area option.
-Added missing defaults to image options. 

Version 3.0.1 (11-26-11)
-Removed .gitignore file.

Version 3.0 (11-26-11)
-Introduction of CyberChimps Core WordPress Framework. 
-New Theme Options panel using Classy Options Framework.
-Introduction of Drag and Drop page elements. 
-Introduction of custom CSS grid.
-New theme design, includes bordered post and page containers, modified post layout.
-Removed SuperFish, using CSS menu. 
-Twitterbar added for use on a per-page basis. 
-Post formats support added.
-New social icon set added.
-Added post pagination links to single.php.


Version 2.1.3 (11-16-11)
-Social icon z-index fix. 

Version 2.1.2 (11-02-11)