@@ -4,6 +4,8 @@ iFeature Changelog
 
 Version 3.0.6 (12-22-11)
 -Added Portuguese language support. 
+-Added rel="me" attribute to social icon links.
+-Removed unnecessary code from social icon function. 
 
 Version 3.0.5 (12-15-11)
 -Additional visual tweaks for WordPress 3.3.
